@@ -1,3 +1,7 @@
+December 25, 2006:
+
+  - Keyboard controls can now be customized.
+
 February 20, 2006: Released version 0.9.2 (also known as the "a month of
 procrastination" release).
 
